fix layout on mobile screen (small) --again

--- a/components/card/style/card.module.css
+++ b/components/card/style/card.module.css
@@ -1,10 +1,10 @@
 .root {
   height: 320px;
-  width: 280px;
+  width: 275px;
   background: #dcdcdc;
   padding: 4px;
-  margin: 15px;
   border-radius: 3px;
+  margin: 15px 18px;
 }
 @media only screen and (max-width: 450px) {
   .root {
@@ -13,22 +13,9 @@
 }
 @media only screen and (max-width: 576px) {
   .root {
-    width: 100%;
     height: 120px;
-    margin: 14px 0px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .root {
-    height: 565px;
     width: 100%;
     margin: 0;
-    margin-top: 25px;
+    margin-top: 14px;
   }
-}
-@media only screen and (min-width: 1024px) {
-  .root {
-    width: 440px;
-    height: 400px;
-  }  
 }
