--- a/src/Container/News/style/news.module.css
+++ b/src/Container/News/style/news.module.css
@@ -83,83 +83,26 @@
 /* live sports section ends here */
 @media only screen and (max-width: 576px) {
   .news_sect {
-    padding: 0px !important;
-  }
-  .txt{
-    font-size: 14px;
-    width: 100%;
-  }
-  .details {
-    padding-top: 9px;
-    width: 85%;
-    height: 100%;
-    margin-top: -1px;
+    padding: 0;
   }
   .content_area {
     display: flex;
   }
   .img_cont {
-    width: 86px;
-    height: 86px;
-    margin-left: 5px;
+    width: 150px;
+    height: 110px;
+    padding: 5px 5px; 
   }
   .img_cont img {
-    width: 100px;
+    width: 100%;
     height: 100%;
-    margin-top: 12px;
-  }
-  #card {
-    height: 210px;
-    width: 100%;
-    margin: 7px 0px;
-  }
-  .muted_txt {
-    display: flex;
-    margin-top: 1%;
-  }
-  .live_content h4 {
-    height: 48px;
-    width: 100%;
-    margin-top: -1%;
-  }
-  .mute {
-    margin-top: 11px;
-    padding-bottom: 0%;
-  }
-  .live {
-    padding: 12px 0px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .news_sect {
-    padding: 5px;
   }
   .details {
-    padding: 0px;
-    width: 85%;
-  }
-  .txt {
-    padding-top: 3%;
-    font-size: 25px;
-  }
-  .sport {
-    font-size: 18px;
+    height: 100px;
+    margin-top: 1%;
   }
   .live {
-    padding: 12px 0px;
-  }
-  .content_area img {
-    width: 100%;
-    height: 100%;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .news_sect {
-    padding: 0px 25px;
-  }
-}
-@media only screen and (max-width: 1050px) {
-  .live {
-    padding: 12px 0px;
+    padding: 0;
+    margin: 0;
   }
 }
