--- a/src/Layout/Banner/style/banner.module.css
+++ b/src/Layout/Banner/style/banner.module.css
@@ -1,4 +1,3 @@
-/* banner section starts here */
 .banner {
   height: 80%;
   width: 94%;
@@ -36,9 +35,8 @@
 .bookings p:nth-child(2) {
   margin-top: -3%;
 }
-/* bannecr section ends here */
-
-@media only screen and (max-width: 768px) {
+/* banner section ends here */
+@media only screen and (max-width: 576px) {
   .banner {
     margin: 0;
     width: 100%;
@@ -46,50 +44,14 @@
   .banner_content {
     flex-wrap: wrap;
     width: 100%;
-    height: 100%;
   }
-  .banner_content img {
+  .img {
     width: 100%;
-    height: 100%;
   }
   .banner_details {
-    width: 100%;
-  }
-  .contestants h5 {
     width: 100%;
   }
   .banner_details div {
     margin-top: 3%;
-  }
-  .bookings {
-    margin-top: 1%;
-  }
-  .bookings p:nth-child(2) {
-    margin-top: -1%;
-  }
-}
-@media only screen and (max-width: 450px) {
-  .banner {
-    background: #fff;
-    margin: 0;
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 980px) {
-  .banner {
-    margin: 0;
-    margin-top: 3%;
-    width: 100%;
-  }
-  .banner_content {
-    width: 100%;
-    height: 100%;
-  }
-  .banner_content img {
-    width: 100%;
-    height: 100%;
-  }
-  .banner_details {
-    width: 100%;
   }
 }
